dataset1235/2025-2/1153765216/users/3158098637/executions/2372395858_316614342.log
== SUBMISSION (2025-08-28 18:15:51)
-- CODE: 
import math
l = float(input())
ap = l/(2*math.tan(math.pi/7))
a = 7/2*l*ap
print(round(a,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
178.06
---- user output:
178.06
-- TEST CASE 2:
---- input:
3
---- correct output:
32.71
---- user output:
32.71
-- TEST CASE 3:
---- input:
6
---- correct output:
130.82
---- user output:
130.82
-- TEST CASE 4:
---- input:
5
---- correct output:
90.85
---- user output:
90.85
-- TEST CASE 5:
---- input:
4
---- correct output:
58.14
---- user output:
58.14
-- TEST CASE 6:
---- input:
6
---- correct output:
130.82
---- user output:
130.82
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:15:45)
-- CODE: 
import math
l = float(input())
ap = l/(2*math.tan(math.pi/7))
a = 7/2*l*ap
print(round(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
178.06
---- user output:
178.06
-- TEST CASE 2:
---- input:
3
---- correct output:
32.71
---- user output:
32.71
-- TEST CASE 3:
---- input:
6
---- correct output:
130.82
---- user output:
130.82
-- TEST CASE 4:
---- input:
5
---- correct output:
90.85
---- user output:
90.85
-- TEST CASE 5:
---- input:
4
---- correct output:
58.14
---- user output:
58.14
-- TEST CASE 6:
---- input:
6
---- correct output:
130.82
---- user output:
130.82
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:15:32)
-- CODE: 
import math
l = float(input())
ap = l/(2*math.tan(math.pi/7))
a = 7/2*l*a
print(round(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
178.06
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = 7/2*l*a
              ^
NameError: name 'a' is not defined. Did you mean: 'ap'?
-- TEST CASE 2:
---- input:
3
---- correct output:
32.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = 7/2*l*a
              ^
NameError: name 'a' is not defined. Did you mean: 'ap'?
-- TEST CASE 3:
---- input:
6
---- correct output:
130.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = 7/2*l*a
              ^
NameError: name 'a' is not defined. Did you mean: 'ap'?
-- TEST CASE 4:
---- input:
5
---- correct output:
90.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = 7/2*l*a
              ^
NameError: name 'a' is not defined. Did you mean: 'ap'?
-- TEST CASE 5:
---- input:
4
---- correct output:
58.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = 7/2*l*a
              ^
NameError: name 'a' is not defined. Did you mean: 'ap'?
-- TEST CASE 6:
---- input:
6
---- correct output:
130.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = 7/2*l*a
              ^
NameError: name 'a' is not defined. Did you mean: 'ap'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
